Fix wrong background color on CSS.

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -10,5 +10,5 @@
 }
 
 .yellow {
-    color: yellow;
+    background-color: yellow;
 }
